codex-rs/tui/src/mcp/snapshots/codex_tui__mcp__manager_view__tests__mcp_manager_delete_confirm.snap
---
source: tui/src/mcp/manager_view.rs
expression: render_view(&view)
---
┌Configured MCP Servers────────────────────────────────────────────────┐
│Name            Status     Command                                    │
│perplexity      failing    perplexity-mcp                             │
│                                                                      │
│                                                                      │
│                                                                      │
│                                                                      │
│                                                                      │
│                                                                      │
└──────────────────────────────────────────────────────────────────────┘
┌Details───────────────────────────────────────────────────────────────┐
│Name: perplexity  Command: perplexity-mcp                             │
│Args: --serve                                                         │
│Description: Sample server                                            │
│Tags: beta, internal                                                  │
└──────────────────────────────────────────────────────────────────────┘
