codex-rs/tui/src/mcp/snapshots/codex_tui__mcp__manager_view__tests__mcp_manager_with_entries.snap
---
source: tui/src/mcp/manager_view.rs
expression: render_view(&view)
---
┌Configured MCP Servers────────────────────────────────────────────────┐
│Name            Status     Command                                    │
│anthropic       unknown    anthropic-mcp                              │
│openai          passing    openai-mcp                                 │
│                                                                      │
│                                                                      │
│                                                                      │
│                                                                      │
│                                                                      │
└──────────────────────────────────────────────────────────────────────┘
┌Details───────────────────────────────────────────────────────────────┐
│Name: anthropic  Command: anthropic-mcp                               │
│Args: --serve                                                         │
│Description: Sample server                                            │
│Tags: beta, internal                                                  │
└──────────────────────────────────────────────────────────────────────┘
